Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis amet mollitia neque fuga fugiat, voluptatibus quae eligendi adipisci recusandae modi a, eveniet repellat sit veniam. Debitis quisquam maiores velit ducimus.</p>
         </article>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>        
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatibus dicta dolores iusto pariatur quas reprehenderit, voluptates itaque, est consequatur ex perspiciatis blanditiis doloremque quae, rerum aperiam dolor placeat veniam?</p>        
         </article>
     </main>
 </body>
