--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis amet mollitia neque fuga fugiat, voluptatibus quae eligendi adipisci recusandae modi a, eveniet repellat sit veniam. Debitis quisquam maiores velit ducimus.</p>
+            <p>Acesse o curso de HTML5</p>
         </article>
         <article>
-            <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatibus dicta dolores iusto pariatur quas reprehenderit, voluptates itaque, est consequatur ex perspiciatis blanditiis doloremque quae, rerum aperiam dolor placeat veniam?</p>        
+            <h2><a href="">Curso de JavaScript</a></h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatibus dicta dolores iusto pariatur quas reprehenderit, voluptates itaque, est consequatur ex perspiciatis blanditiis doloremque quae, rerum aperiam dolor placeat veniam?</p>
+            <p><a href="">Acesse o curso de JavaScript</a></p>        
         </article>
     </main>
 </body>
