--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <p>Acesse o curso de HTML5</p>
         </article>
         <article>
-            <h2><a href="">Curso de JavaScript</a></h2>
+            <h2>Curso de JavaScript</h2>
             <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatibus dicta dolores iusto pariatur quas reprehenderit, voluptates itaque, est consequatur ex perspiciatis blanditiis doloremque quae, rerum aperiam dolor placeat veniam?</p>
-            <p><a href="">Acesse o curso de JavaScript</a></p>        
+            <p>Acesse o curso de JavaScript</p>        
         </article>
     </main>
 </body>
